2103.	[perf]		andrei
	When not explicitly configured, multi-threading is now enabled by
	default for the core Kea DHCP service ("enable-multi-threading"
	set to true). For now, HA+MT is still disabled by default
	("enable-multi-threading" and "http-dedicated-listener" both
	still set to false in the high-availability library parameters).
	(Gitlab #2402)

2102.	[func]*		tmark
	The logger to which kea-dhcp4 now logs EVAL_RESULT log
	messages issued during packet classification has been
	changed from "options4" to "dhcp4".  This corrects an
	inconsistency between kea-dhcp6 and kea-dhcp4 behavior.
	(Gitlab #2720)

2101.	[build]		andrei
	Shell tests and python tests no longer run if gtest is disabled.
	This provides the ability to run distcheck without tests.
	(Gitlab #2742)

2100.	[doc]		Kevin P. Fleming
	Fixed several JSON examples in the Kea ARM.
	(Gitlab #2494)

2099.	[func]*		tmark
	An address reserved in a global reservation must now lie
	within the range of the subnet or shared-network selected
	by Kea. In the event that it does not, the server will
	attempt to allocate an address dynamically.  This change
	applies to both kea-dhcp4 and kea-dhcp6.  Prior to this
	the servers would grant a lease for any globally reserved
	address without regard for its feasibility within the
	selected subnet. Thanks to Kyle Birkeland for reporting
	the issue and contributing the patch.
	(Gitlab #2631, #2632)

2098.	[doc]		razvan
	Updated classify ARM examples with a case when both operands of
	the evaluated expression are computed at runtime.
	(Gitlab #2664)

2097.	[func]		tmark
	kea-dhcp4 and kea-dhcp6 will now accept but ignore and
	warn about renew-timer values that exceed rebind-timer
	values. Prior to this the servers treated this as a fatal
	configuration error.
	(Gitlab #2677)

2096.	[bug]		[tmark]
	Corrected a bug which allowed options to be added to themselves
	as suboptions.
	(Gitlab #2538)

2095.	[bug]		marcin, tmark