@@ -47,7 +47,7 @@ libkea_http_la_SOURCES += basic_auth.cc basic_auth.h
 libkea_http_la_CXXFLAGS = $(AM_CXXFLAGS)
 libkea_http_la_CPPFLAGS = $(AM_CPPFLAGS)
 libkea_http_la_LDFLAGS  = $(AM_LDFLAGS)
-libkea_http_la_LDFLAGS += -no-undefined -version-info 53:0:0
+libkea_http_la_LDFLAGS += -no-undefined -version-info 54:0:0
 
 libkea_http_la_LIBADD  = $(top_builddir)/src/lib/hooks/libkea-hooks.la
 libkea_http_la_LIBADD += $(top_builddir)/src/lib/cc/libkea-cc.la
